# dskwipe

./: .cproject  .project  CMakeLists.txt  README.md  sg_dd.c
sg3_utils-1.45/: config.h  config.status  libtool
sg3_utils-1.45/doc/: Makefile
sg3_utils-1.45/include/: Makefile
sg3_utils-1.45/lib/: Makefile  libsgutils2.la  sg_cmds_basic.lo  sg_cmds_basic2.lo  sg_cmds_extra.lo  sg_cmds_mmc.lo  sg_io_linux.lo  sg_lib.lo  sg_lib_data.lo  sg_pt_common.lo  sg_pt_linux.lo  sg_pt_linux_nvme.lo
sg3_utils-1.45/scripts/: Makefile
sg3_utils-1.45/src/: Makefile  sg_bg_ctl  sg_compare_and_write  sg_copy_results  sg_dd  sg_decode_sense  sg_emc_trespass  sg_format  sg_get_config  sg_get_elem_status  sg_get_lba_status  sg_ident  sg_inq  sg_logs  sg_luns  sg_map  sg_map26  sg_modes  sg_opcodes  sg_persist  sg_prevent  sg_raw  sg_rbuf  sg_rdac  sg_read  sg_read_attr  sg_read_block_limits  sg_read_buffer  sg_read_long  sg_readcap  sg_reassign  sg_referrals  sg_rep_zones  sg_requests  sg_reset  sg_reset_wp  sg_rmsn  sg_rtpg  sg_safte  sg_sanitize  (+30 more)
wpdisk/: wipedisk.c
